force-app/main/default/objects/EvidenceBundle__c/EvidenceBundle__c.object-meta.xml
<CustomObject>
    <label>EvidenceBundle</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EvidenceBundle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EvidenceBundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>