force-app/main/default/objects/EvidenceBundle__c/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Checksum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>