force-app/main/default/objects/EvidenceBundle__c/fields/ContentHash__c.field-meta.xml
<CustomField>
    <fullName>ContentHash__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContentHash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>