force-app/main/default/objects/EvidenceBundle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GENERATED</fullName>
            </value>
            <value>
                <fullName>EXPORTED</fullName>
            </value>
            <value>
                <fullName>ARCHIVED</fullName>
            </value>
            <value>
                <fullName>DLQ</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>