force-app/main/default/objects/EvidenceBundle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Checksum__c</columns>
    <columns>Content__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>